Updated icons in menus and toolbar

--- a/craftersmine.Aesir/MainForm.resx
+++ b/craftersmine.Aesir/MainForm.resx
@@ -66,103 +66,118 @@
   <metadata name="toolStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>248, 17</value>
   </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="newArchiveTool.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAACRSURBVDhPY/j27dt/SjDYACcnJ7IwigEf3n8kCZNswPNb
-        J/+f6DYF0yA+yQac6Db5f6hWCmwIiE+mC0wIu2DS2Vf/F1x6DefjwlgNyNr34r/0wkdgTMgQDAOQNRNj
-        CIoBOg0rMTTDMLIhIHbriZeYBmDTiIxBGkEYxge5liQDsGGQqykyAISpZwAlmIEywMAAAAc1/Jwvt6sN
-        AAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="openArchiveTool.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAACRSURBVDhPY/j27dt/SjDYACcnJ7IwigEf3n8kCZNswPNb
-        J/+f6DYF0yA+yQac6Db5f6hWCmwIiE+mC0wIu2DS2Vf/F1x6DefjwlgNyNr34r/0wkdgTMgQDAOQNRNj
-        CIoBOg0rMTTDMLIhIHbriZeYBmDTiIxBGkEYxge5liQDsGGQqykyAISpZwAlmIEywMAAAAc1/Jwvt6sN
-        AAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="saveArchiveTool.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAACRSURBVDhPY/j27dt/SjDYACcnJ7IwigEf3n8kCZNswPNb
-        J/+f6DYF0yA+yQac6Db5f6hWCmwIiE+mC0wIu2DS2Vf/F1x6DefjwlgNyNr34r/0wkdgTMgQDAOQNRNj
-        CIoBOg0rMTTDMLIhIHbriZeYBmDTiIxBGkEYxge5liQDsGGQqykyAISpZwAlmIEywMAAAAc1/Jwvt6sN
-        AAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="extractArchiveTool.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAACRSURBVDhPY/j27dt/SjDYACcnJ7IwigEf3n8kCZNswPNb
-        J/+f6DYF0yA+yQac6Db5f6hWCmwIiE+mC0wIu2DS2Vf/F1x6DefjwlgNyNr34r/0wkdgTMgQDAOQNRNj
-        CIoBOg0rMTTDMLIhIHbriZeYBmDTiIxBGkEYxge5liQDsGGQqykyAISpZwAlmIEywMAAAAc1/Jwvt6sN
-        AAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="copyToTool.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAACRSURBVDhPY/j27dt/SjDYACcnJ7IwigEf3n8kCZNswPNb
-        J/+f6DYF0yA+yQac6Db5f6hWCmwIiE+mC0wIu2DS2Vf/F1x6DefjwlgNyNr34r/0wkdgTMgQDAOQNRNj
-        CIoBOg0rMTTDMLIhIHbriZeYBmDTiIxBGkEYxge5liQDsGGQqykyAISpZwAlmIEywMAAAAc1/Jwvt6sN
-        AAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="moveToTool.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAACRSURBVDhPY/j27dt/SjDYACcnJ7IwigEf3n8kCZNswPNb
-        J/+f6DYF0yA+yQac6Db5f6hWCmwIiE+mC0wIu2DS2Vf/F1x6DefjwlgNyNr34r/0wkdgTMgQDAOQNRNj
-        CIoBOg0rMTTDMLIhIHbriZeYBmDTiIxBGkEYxge5liQDsGGQqykyAISpZwAlmIEywMAAAAc1/Jwvt6sN
-        AAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="renameTool.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAACRSURBVDhPY/j27dt/SjDYACcnJ7IwigEf3n8kCZNswPNb
-        J/+f6DYF0yA+yQac6Db5f6hWCmwIiE+mC0wIu2DS2Vf/F1x6DefjwlgNyNr34r/0wkdgTMgQDAOQNRNj
-        CIoBOg0rMTTDMLIhIHbriZeYBmDTiIxBGkEYxge5liQDsGGQqykyAISpZwAlmIEywMAAAAc1/Jwvt6sN
-        AAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="deleteTool.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAACRSURBVDhPY/j27dt/SjDYACcnJ7IwigEf3n8kCZNswPNb
-        J/+f6DYF0yA+yQac6Db5f6hWCmwIiE+mC0wIu2DS2Vf/F1x6DefjwlgNyNr34r/0wkdgTMgQDAOQNRNj
-        CIoBOg0rMTTDMLIhIHbriZeYBmDTiIxBGkEYxge5liQDsGGQqykyAISpZwAlmIEywMAAAAc1/Jwvt6sN
-        AAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="propertiesMenu.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAACRSURBVDhPY/j27dt/SjDYACcnJ7IwigEf3n8kCZNswPNb
-        J/+f6DYF0yA+yQac6Db5f6hWCmwIiE+mC0wIu2DS2Vf/F1x6DefjwlgNyNr34r/0wkdgTMgQDAOQNRNj
-        CIoBOg0rMTTDMLIhIHbriZeYBmDTiIxBGkEYxge5liQDsGGQqykyAISpZwAlmIEywMAAAAc1/Jwvt6sN
-        AAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="validateTool.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAACRSURBVDhPY/j27dt/SjDYACcnJ7IwigEf3n8kCZNswPNb
-        J/+f6DYF0yA+yQac6Db5f6hWCmwIiE+mC0wIu2DS2Vf/F1x6DefjwlgNyNr34r/0wkdgTMgQDAOQNRNj
-        CIoBOg0rMTTDMLIhIHbriZeYBmDTiIxBGkEYxge5liQDsGGQqykyAISpZwAlmIEywMAAAAc1/Jwvt6sN
-        AAAAAElFTkSuQmCC
-</value>
-  </data>
   <metadata name="treeIcons.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>346, 17</value>
   </metadata>
   <metadata name="largeViewIcons.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>471, 17</value>
   </metadata>
+  <data name="largeViewIcons.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
+        LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
+        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAJBcAAAJNU0Z0AUkBTAMBAQAB
+        GAEAARgBAAEgAQABIAEABP8BIQEACP8BQgFNATYHAAE2AwABKAMAAYADAAEgAwABAQEAASAGAAFASgAD
+        EgEYAy0BRAMDAQQQAAMDAQQDCQEMAwoBDQMKAQ0DCgENAwoBDQMKAQ0DCgENAwoBDQMKAQ0DCAEK/wC5
+        AAMhATABRwFJAUoBhwMGAQcQAAMGAQgDEgEXAxMBGgMTARoDEwEaAxMBGgMTARoDEwEaAxMBGgMTARoD
+        DwET/wCBAAMGAQgDCQEMAwoBDQMKAQ0DCgENAwoBDQMKAQ0DCgENAwoBDQMJAQwDBgEICAADJwE6AUMB
+        RAFFAXgBUAFYAVwBrAMNAREEAgwAAwkBCwMZASMDOgFiAzMBUgMzAVIDMwFSAzMBUgNFAYEDRQGBA0UB
+        gQMqAT//AIEAAwwBDwMTARkDEwEaAxMBGgMTARoDEwEaAxMBGgMTARoDEwEaAxMBGQMMAQ8IAAFCAkMB
+        dQFPAWABaQHAAU4BagF3AdEDEwEaAwMBBAwAAwwBDwMgAS4DTgGrA0kBigNJAYoDSQGKA0kBigMsAecD
+        LAHnAywB5wM+AWv/AIEAAxIBFwI7ATwBZQJAAUEBcAJAAUEBcAJAAUEBcAJAAUEBcAJAAUEBcAJAAUEB
+        cAJAAUEBcAI7ATwBZQMSARcDCgENATACMQFMAVIBXgFjAbUBWwGEAZQB4AFMAXYBjQHkA0ABbwE6AjsB
+        YgM5AV8DNQFWAw4BEgMJAQwDKQE9A0kBygFhAmABxQNSAcUBYQJgAcUBYQJgAcUDMwHzAzoB8wNAAfMD
+        PwFs/wCBAAMWAR4BTAFUAVsBsgFJAVYBZQHFAUkBVgFlAcUBSQFWAWUBxQFJAVYBZQHFAUkBVgFlAcUB
+        SQFWAWUBxQFJAVYBZQHFAUwBVAFbAbIDFgEeAxQBGwFLAU4BUAGYAU8BlQG2AfYBggHLAewB/wFNAY0B
+        rAH3AUgBWgFiAcQBSQFZAWIBwQFLAVwBYwG+AU4BVAFZAasDGgEkAwcBCQMwAUwDOQHpAbkCqwH/A0MB
+        /wG1AqcB/wG3AqkB/wNDAf8DVAH/A2gB/wM/AW7/AIEAAwwBDwFQAV0BawHHAVQBcAGNAeIBVAFwAY0B
+        4gFUAXABjQHiAVQBcAGNAeIBVAFwAY0B4gFUAXABjQHiAVQBcAGNAeIBUAFdAWsBxwMMBA8BFAFMAVMB
+        VgGlAWQBrQHTAfsBgQHLAesB/wFRAZsBuwH7AVYBeAGIAeIBWQF5AY0B4AFYAXsBjgHfAVEBYQFoAcIB
+        JgInATkDBgEHA0kBjQM/AfQBugKuAf8DQQH/AbMCqAH/AbYCqwH/A0EB/wNSAf8DaQH/Az4Bav8AhQAB
+        VgFuAYgB3AF6Aa0B3wH/AXoBrQHfAf8BegGtAd8B/wF6Aa0B3wH/AXoBrQHfAf8BegGtAd8B/wF6Aa0B
+        3wH/AVYBbgGIAdwEAAMLAQ4BTAFZAV4BsgGEAc0B7AH/AX8BygHpAf8BVwGnAcwB/wF/AbwB2wH/AYYB
+        xwHnAf8BjQHRAfMB/wFbAXkBiAHZAzEBTQMEAQUDRQHOA1MB/wG6ArEB/wM/Af8BsQKoAf8BtgKtAf8D
+        PwH/A1AB/wNqAf8DPQFn/wCFAAFWAWgBeQHYAXwBrwHgAf8BegGgAcYB/wF5AZIBqwH/AYEBmwG0Af8B
+        eQGSAasB/wF5AZIBqwH/AXkBkgGrAf8BXAFqAXkB1AQAAwYBBwFOAVcBXQGrAYUBzwHtAf8BgQHMAeoB
+        /wFXAagBzQH/AX4BuwHaAf8BhQHFAeYB/wGMAdAB8gH/AX8BlgGTAewBQwFEAUUBeQQCA0MBzANRAf8B
+        vQK2Af8DMwH/AbQCrQH/AbkCsgH/Az0B/wNOAf8DawH/AzwBZv8AhQABVwFjAW4B1QF9AbAB4QH/AXoB
+        lAGsAf8DdwH/A4gB/wN3Af8DdwH/A3cB/wFeAWQBagHNCAABTQFUAVgBpAGGAdAB7gH/AYIBzQHrAf8B
+        WAGpAc4B/wF8AbkB2AH/AYMBxAHkAf8BigHOAfAB/wHCAcUBkQH/AU0BVAFYAaQEAANIAckDUAH/AcAC
+        uwH/AycB/wG3ArIB/wG8ArcB/wM7Af8DTAH/A2wB/wM7AWX/AIUAAV4BYQFnAc0BegGUAawB/wGKAZYB
+        owH/A5kB/wGCAY8BmwH/A4gB/wOuAf8DogH/AV0BYAFiAcAIAAFNAVQBWAGhAYgB0gHvAf8BhQHPAewB
+        /wFaAaoBzwH/AX0BugHYAf8BhAHEAeQB/wGLAc8B8QH/AcUBygGWAf8BTQFUAVgBoQQAA0cBxwNPAf8B
+        xALBAf8DdQH/Ab0CugH/AcECvgH/AzkB/wNKAf8DbgH/AzsBZP8AhQADYwHFA3cB/wOZAf8DuwH/AX0B
+        lgGuAf8DmQH/A+YB/wPMAf8DXQGzCAABTAFSAVYBngGLAdMB8AH/AYcB0AHtAf8BWwGsAdEB/wF9AboB
+        2AH/AYQBxQHlAf8BiwHPAfEB/wHIAc8BmwH/AUwBUgFWAZ4EAANJAcUDTwH/AcgCxwH/AcMCwgH/AcMC
+        wgH/AcYCxQH/AzcB/wNIAf8DbwH/AzsBY/8AhQABYAFoAXABywOZAf8BnQGqAbYB/wGhAbsB0gH/AZMB
+        oAGsAf8DqgH/A9AB/wPEAf8BXgFgAWMBvggAAUwBUwFWAZ0BjQHVAfEB/wGJAdIB7wH/AV0BrgHSAf8B
+        fgG7AdkB/wGFAcYB5gH/AYwB0AHyAf8BwwHYAcIB/wFMAVMBVgGdBAADSgHDA08B/wF+An0B/wN7Af8D
+        ewH/A3wB/wM2Af8DPgH/A3EB/wM6AWL/AIUAAV0BbwGCAdEDuwH/AaEBuwHSAf8BhwG6AekB/wOqAf8D
+        uwH/A7sB/wO7Af8BXQFkAWkByggAAUwBUgFVAZsBjwHXAfIB/wGLAdQB8AH/AV8BsAHUAf8BfwG8AdoB
+        /wGGAccB5wH/AY0B0QHzAf8BvwHhAeoB/wFMAVIBVQGbBAADSQHBA1AB/wMzAf8DMwH/AzMB/wMzAf8D
+        NAH/AzQB/wNzAf8DOgFh/wCFAAFbAXEBgwHQAaQBvQHUAf8BlwG9Ad8B/wGKAb0B6wH/AZsBtQHLAf8B
+        pAG9AdQB/wGkAb0B1AH/AaQBvQHUAf8BXQFqAXMBzAgAAUsBUAFTAZkBkQHZAfMB/wGOAdYB8QH/AWAB
+        sgHVAf8BgAG9AdsB/wGHAccB6AH/AY4B0gH0Af8BwgHkAe4B/wFLAVABUwGZBAADSgHAA10B/wNMAf8D
+        TAH/A0wB/wNMAf8DTQH/A00B/wNxAf8DOgFg/wCFAAFdAXABgQHPAYwBvwHsAf8BjAG/AewB/wGMAb8B
+        7AH/AYwBvwHsAf8BjAG/AewB/wGMAb8B7AH/AYwBvwHsAf8BXQFwAYEBzwgAAUsBUAFTAZcBlAHbAfQB
+        /wGQAdgB8gH/AWIBtAHXAf8BgAG9AdwB/wGIAcgB6QH/AY8B0wH1Af8BxQHnAfMB/wFLAVABUwGXBAAD
+        SwG+A2oB/wNlAf8DZQH/A2UB/wNlAf8DZQH/A2UB/wNuAf8DOQFf/wCFAAFfAXEBgQHOAY8BwgHuAf8B
+        jwHCAe4B/wFoAZsBywH/AXsBrgHdAf8BjwHCAe4B/wGPAcIB7gH/AY8BwgHuAf8BXwFxAYEBzggAAUoB
+        UAFSApYB3QH1Af8BkgHaAfMB/wFkAbUB2AH/AYEBvgHdAf8BiAHJAekB/wGQAdQB9gH/AcgB6gH3Af8B
+        SgFQAVIBlgQAA0wBvQKGAYQB/wKtAaUB/wKtAaUB/wKtAaUB/wKtAaUB/wKtAaUB/wKlAZ4B/wNwAf8D
+        OQFe/wCFAAFeAW4BfwHNAZEBxAHwAf8BkQHEAfAB/wFEAXcBqgH/AWsBngHNAf8BkQHEAfAB/wGRAcQB
+        8AH/AZEBxAHwAf8BXgFuAX8BzQgAAUoBUAFSAZQBmAHeAfYB/wGUAdsB9AH/AWYBtwHaAf8BgQG+Ad0B
+        /wGJAckB6gH/AZAB1AH2Af8BywHtAfsB/wFKAVABUgGUBAADTAG7AqMBngH/AvQB5AH/AvQB5AH/AvQB
+        5AH/AvQB5AH/AvQB5AH/AuQB1wH/A3IB/wM5AV7/AIUAAV8BcAF/AcwBkwHGAfIB/wGTAcYB8gH/AU0B
+        gAGzAf8BXAGPAcAB/wFpAZwBywH/AZMBxgHyAf8BkwHGAfIB/wFfAXABfwHMCAABSgFOAVABkgGZAeAB
+        9wH/AZYB3QH1Af8BZwG5AdsB/wGCAb8B3gH/AYoBygHrAf8BkQHVAfcB/wF+AZsBqQHjATsCPAFkBAAD
+        TAG6AqwBpgH/AvAB4gH/AvAB4gH/AvAB4gH/AvAB4gH/AvAB4gH/AusB3QH/A3QB/wM4AV3/AIUAAV8B
+        cAF/AcwBlQHIAfMB/wGVAcgB8wH/AVUBiAG7Af8BTQGAAbMB/wFAAXMBpgH/AZUByAHzAf8BlQHIAfMB
+        /wFfAXABfwHMCAABSQFOAVABkAGbAeIB+AH/AZgB3wH2Af8BaAG7Ad0B/wGDAcAB3wH/AYsBywHsAf8B
+        kgHWAfgB/wFfAXMBewHIAyMBMwQAA0sBuAK2Aa8B/wLsAd8B/wLsAd8B/wLsAd8B/wLsAd8B/wLsAd8B
+        /wLxAeQB/wN1Af8DOAFc/wCFAAFgAXABfgHKAaAB0wH5Af8BoAHTAfkB/wFmAZkBzAH/AWIBlQHIAf8B
+        UwGGAbkB/wGgAdMB+QH/AaAB0wH5Af8BYAFwAX4ByggAAUkBTQFQAY8BngHkAfkB/wGbAeEB+AH/AWoB
+        vAHeAf8BhAHBAeAB/wGMAcwB7QH/AZMB1wH5Af8BXQFwAXsBxwMTARoEAANNA7cBsgH/Au8B4wH/Au8B
+        4wH/Au8B4wH/Au8B4wH/Au8B4wH/AvMB6AH/A3cB/wM4AVv/AIUAAWABcQF9AckBqgHdAv8BqgHdAv8B
+        dwGqAd0B/wF3AaoB3QH/AWYBmQHMAf8BqgHdAv8BqgHdAv8BYAFxAX0ByQgAAUkBTAFPAY0BoAHmAfoB
+        /wGdAeMB+QH/AWwBvgHgAf8BhQHCAeEB/wGNAc0B7gH/AZQB2AH6Af8BXgFxAXkBxggAA0sBtQK5AbQB
+        /wLxAecB/wLxAecB/wLxAecB/wLxAecB/wLxAecB/wL1AesB/wN5Af8DOAFb/wCFAAFYAWEBawG4AZUB
+        yAHzAf8BlQHIAfMB/wFjAZYByQH/AWMBlgHJAf8BVwGKAb0B/wGVAcgB8wH/AZUByAHzAf8BWAFhAWsB
+        uAgAAUgBTAFOAYwBogHnAfsB/wGfAeUB+gH/AW8BwQHjAf8BhgHDAeIB/wGOAc4B7gH/AZUB2QH7Af8B
+        XQFwAXkBxQgAA0wBtAK6AbYB/wL0AewB/wL0AewB/wL0AewB/wL0AewB/wL0AewB/wL3Ae8B/wN7Af8D
+        NwFa/wCFAAFTAVgBXQGnAYABswHmAf8BgAGzAeYB/wFOAYEBtAH/AU4BgQG0Af8BSAF7Aa4B/wGAAbMB
+        5gH/AYABswHmAf8BUwFYAV0BpwgAAUkBTAFNAYoBpAHpAfwB/wGhAeYB+wH/AXEBxAHmAf8BhwHEAeIB
+        /wGPAc8B7wH/AZYB2gH8Af8BXQFwAXkBxQgAA0wBsgK8AbkB/wL2AfAB/wL2AfAB/wL2AfAB/wL2AfAB
+        /wL2AfAB/wL5AfMB/wN8Af8DNgFZ/wCFAAFOAVABVAGWAYUBuAHrAf8BhAG3AeoB/wFIAXsBrgH/AUgB
+        ewGuAf8BQwF2AakB/wGEAbcB6gH/AYUBuAHrAf8BTgFQAVQBlggAAUkBSwFNAYkBpQHqAfwB/wGjAegB
+        /AH/AXQBxgHmAf8BjAHLAeoB/wGTAdUB9gH/AZcB2wH9Af8BXQFwAXkBxAgAA04BsQK9AbsB/wL5AfQB
+        /wL5AfQB/wL5AfQB/wL5AfQB/wL5AfQB/wL7AfYB/wN9Af8DNgFZ/wCFAAFIAUoBTAGGAYkBvAHvAf8B
+        iAG7Ae4B/wFBAXQBpwH/AUEBdAGnAf8BPgFxAaQB/wGIAbsB7gH/AYkBvAHvAf8BSAFKAUwBhggAAUcB
+        SgFMAYcBpwHsAf0B/wGkAekB/AH/AXYByAHnAf8BkAHRAfEB/wGXAdsB/AH/AZcB2wH9Af8BXgFwAXkB
+        wwgAA00BsAK+Ab0B/wL7AfgB/wL7AfgB/wL7AfgB/wL7AfgB/wL7AfgB/wL9AfoB/wN+Af8DNgFY/wCF
+        AAFCAkMBdQGJAbwB7wH/AYgBuwHuAf8BOwFuAaEB/wE7AW4BoQH/AToBbQGgAf8BiAG7Ae4B/wGJAbwB
+        7wH/AUICQwF1CAABRwFKAUsBhgGpAe4B/gH/AZ0B5gH6Af8BaQHBAeUB/wGUAdcB+AH/AZcB2wH9Af8B
+        mAHcAf4B/wFeAXABeQHDCAADTQGvAsABvwH/Av0B+wH/Av0B+wH/Av0B+wH/Av0B+wH/Av0B+wH/Av4B
+        /AH/A4EB/wM2AVj/AIUAATsCPAFkAYkBvAHvAf8BiAG7Ae4B/wE1AWgBmwH/ATUBaAGbAf8BNQFoAZsB
+        /wGIAbsB7gH/AYkBvAHvAf8BOwI8AWQIAAFHAUoBSwGFAawB8AL/AZUB4gH4Af8BWwG5AeMB/wGYAdwB
+        /gH/AZgB3AH+Af8BmAHcAf4B/wFdAW8BdgHCCAADTQGuA8ID/wH+A/8B/gP/Af4D/wH+A/8B/gX/A4QB
+        /wM2AVf/AIUAAzEBTQFbAWgBeAHFAVsBaAF4AcUBPgFaAXsB5gE+AVoBewHmAT4BWgF7AeYBWwFoAXgB
+        xQFbAWgBeAHFAzEBTQgAAUcBSgFLAYQBkAHfAfcB/wF6AdEB8QH/AXUBygHuAf8BnQHhAv8BnQHhAv8B
+        nQHhAv8BXQFvAXYBwggAA0sBmAJnAWUBxAJnAWUBswJnAWUBswJnAWUBswJnAWUBswJnAWUBswJnAWUB
+        swNZAdYDMAFM/wCFAAMlATYBSQFLAU0BiwFJAUsBTQGLAUMBVQFmAcwBQwFVAWYBzAFDAVUBZgHMAUkB
+        SwFNAYsBSQFLAU0BiwMlATYIAAFGAUkBSgGDAXQBzgHvAf8BXwG/AeoB/wGOAdsB+QH/AaIB5gL/AaIB
+        5gL/AaIB5gL/AV4BbwF1AcEIAANFAYECSgFJAYkCPQE8AWYCPQE8AWYCPQE8AWYCPQE8AWYCPQE8AWYC
+        PQE8AWYDTgGsAysBQf8AhQADFAEbAS0CLgFGAS0CLgFGAjwBPQFmAjwBPQFmAjwBPQFmAS0CLgFGAS0C
+        LgFGAxQBGwgAAUEBQgFDAXIBWAFrAXMBwAFVAWkBcgHAAVsBbQF0AcABXQFtAXQBwAFdAW0BdAHAAV0B
+        bQF0AcABTgFTAVYBmQgAAysBQQMtAUUDIwEzAyMBMwMjATMDIwEzAyMBMwMjATMDNQFWAxgBIP8AsQAB
+        OgI7AWEBRQFIAUkBgQFFAUgBSQGBAUUBSAFJAYEBRQFIAUkBgQFFAUgBSQGBAUUBSAFJAYEBQAFBAUIB
+        cf8AsQABQgFNAT4HAAE+AwABKAMAAYADAAEgAwABAQEAAQEGAAECFgAD/wEAAf8B/AF4DQAB/wH8AXgO
+        AAEYATgOAAEYATg9AAGAASAOAAGAASAOAAGAATABBA0AAYABMAEEDQABgAEwAQQNAAGAATABBA0AAYAB
+        MAEEDQABgAEwAQQNAAGAATABBA0AAYABMAEEDQABgAEwAQQNAAGAATABBA0AAYABMAEEDQABgAEwAQQN
+        AAGAATABDA0AAYABMAEMDQABgAEwAQwNAAGAATABDA0AAYABMAEMDQABgAEwAQwNAAGAATABDA0AAYAB
+        MAEMDQABgAEwAQwNAAGAATABDA0AAf8B8AEPAf8MAAs=
+</value>
+  </data>
   <metadata name="smallViewIcons.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>604, 17</value>
   </metadata>
